Update details view in AutomobileComponent; add new CSS for command layout; refactor modal button actions across multiple components

--- a/src/app/modules/carburant/carburant-entree/carburant-entree.component.html
+++ b/src/app/modules/carburant/carburant-entree/carburant-entree.component.html
@@ -69,7 +69,7 @@
         <p style="font-size: 18px;">{{modalData.description}}</p>
     </div>
     <div class="modal-footer ">
-        <button class="btn btn-light mx-2 " (click)="modal.close( 'Close click');onUpdateForm(modalData); "> <i class="fal fa-edit" style="color:#99600b"></i> Modifier</button>
+        <button class="btn btn-light mx-2 " (click)="modal.close( 'Close click');onShowUpdateForm(modalData); "> <i class="fal fa-edit" style="color:#99600b"></i> Modifier</button>
         <button type="button " class="btn btn-outline-dark " (click)="modal.close( 'Close click') ">Fermer</button>
     </div>
 </ng-template>
