--- a/src/app/modules/transport/assurance-sinistre/edit/edit.component.html
+++ b/src/app/modules/transport/assurance-sinistre/edit/edit.component.html
@@ -9,56 +9,59 @@
         <form class="custom-placeholder" [formGroup]="editForm">
             <div *ngIf="!(assuranceId||isUpdating)" class="formSep form-group  d-flex justify-content-center pb-0 pt-3">
                 <div class="col-10">
-                    <label class="control-label" for="assurance_id">Assurance</label>
-                    <select class="form-control form-control-sm" mySelectFirstOption [class.loading]="allAssurances$ | async" required name="assurance_id" [formControlName]="'assurance_id'" [ngClass]="{'is-invalid': shouldShowRequiredError( 'assurance_id'), 'is-valid': isValid('assurance_id')}"
+                    <div class="input-group">
+                        <select class="form-control" mySelectFirstOption [class.loading]="allAssurances$ | async" required name="assurance_id" [formControlName]="'assurance_id'" [ngClass]="{'is-invalid': shouldShowRequiredError( 'assurance_id'), 'is-valid': isValid('assurance_id')}"
                         required>
-                    <option value="">--choississez l'assurance --</option>
-                    <ng-container *ngFor="let item of (allAssurances$ | async)">
-                        <option [ngValue]="item.id">{{item.libelle | titlecase}}</option>
-                    </ng-container>
-                </select>
+                            <ng-container *ngFor="let item of (allAssurances$ | async)">
+                                <option [ngValue]="item.id">{{item.libelle | titlecase}}</option>
+                            </ng-container>
+                        </select>
+                        <span class="custom-span">Assurance</span>   
+                    </div>
                     <div *ngIf="shouldShowRequiredError('assurance_id')" class="invalid-feedback">veillez choisir l'assurance.</div>
                 </div>
             </div>
 
             <div class="formSep form-group  d-flex justify-content-center pb-0 pt-3">
                 <div class="col-10">
-                    <label class="control-label" for="salle">Cause du remboursement</label>
-                    <input type="text" class="form-control form-control-sm" required [formControlName]="'libelle'" [ngClass]="{'is-invalid': shouldShowRequiredError('libelle'), 'is-valid': isValid('libelle')}" name="libelle" required>
+                    <input type="text" class="form-control" required [formControlName]="'libelle'" [ngClass]="{'is-invalid': shouldShowRequiredError('libelle'), 'is-valid': isValid('libelle')}" name="libelle" required>
+                    <span class="custom-span">Cause du remboursement</span>                                        
                     <div *ngIf="shouldShowRequiredError('libelle')" class="invalid-feedback">veillez saisir le libellé.</div>
                 </div>
             </div>
 
             <div class="formSep form-group  d-flex justify-content-center pb-0 pt-3">
                 <div class="col-10">
-                    <label class="control-label" for="libelle">Date Sinistre</label>
-                    <input class="form-control form-control-sm" name="dp" (click)="d.toggle()" ngbDatepicker #d="ngbDatepicker" [formControlName]="'date_sinistre'" [ngClass]="{'is-invalid': shouldShowRequiredError('date_sinistre'), 'is-valid': isValid('date_sinistre')}" required>
+                    <input class="form-control" name="dp" (click)="d.toggle()" ngbDatepicker #d="ngbDatepicker" [formControlName]="'date_sinistre'" [ngClass]="{'is-invalid': shouldShowRequiredError('date_sinistre'), 'is-valid': isValid('date_sinistre')}" required>
+                    <span class="custom-span">Date Sinistre</span>                                        
                     <div *ngIf="shouldShowRequiredError('date_sinistre')" class="invalid-feedback">veillez saisir la date.</div>
                 </div>
             </div>
 
             <div class="formSep form-group  d-flex justify-content-center pb-0 pt-3">
                 <div class="col-10">
-                    <label class="control-label">Montant Remboursement</label>
-                    <input type="number" min="0" class="form-control" [formControlName]="'montant_remboursement'" name="montant">
+                    <input type="number" min="0" class="form-control" [formControlName]="'montant_remboursement'" name="montant" [ngClass]="{'is-invalid': shouldShowRequiredError('montant_remboursement'), 'is-valid': isValid('montant_remboursement')}">
+                    <span class="custom-span">Montant Remboursement</span>                    
+                    <div *ngIf="shouldShowRequiredError('montant_remboursement')" class="invalid-feedback">veillez saisir le montant.</div>                
                 </div>
             </div>
             <div class="formSep form-group  d-flex justify-content-center pb-0 pt-3">
                 <div class="col-10">
-                    <label class="control-label">Statut</label>
-                    <select class="form-control form-control-sm" name="statut" [formControlName]="'statut'">
-                        <ng-container *ngFor="let item of frequenceSelect">
-                            <option [ngValue]="item.id">{{item.libelle}}</option>
-                        </ng-container>
-                      </select>
+                    <div class="input-group">
+                        <select class="custom-select" name="statut" [formControlName]="'statut'" [ngClass]="{'is-invalid': shouldShowRequiredError('statut'), 'is-valid': isValid('statut')}">
+                            <ng-container *ngFor="let item of frequenceSelect">
+                                <option [ngValue]="item.id">{{item.libelle}}</option>
+                            </ng-container>
+                          </select>
+                        <span class="custom-span">Statut</span> 
+                    </div>
                     <div *ngIf="shouldShowRequiredError('statut')" class="invalid-feedback">veillez choisir.</div>
                 </div>
             </div>    
             <div class="formSep form-group  d-flex justify-content-center pb-0 pt-3">
                 <div class="col-10">
-                    <label class="control-label" for="description">Description</label>
-                    <textarea name="description" required maxlength="5000" class="form-control form-control-sm" cols="30" rows="3" [formControlName]="'description'" [ngClass]="{'is-invalid': shouldShowRequiredError('description'), 'is-valid': isValid('description')}"></textarea>
-                    <small>{{editForm.get('description').value?.length}}/5000</small>
+                    <textarea name="description" required maxlength="5000" class="form-control" cols="30" rows="3" [formControlName]="'description'" [ngClass]="{'is-invalid': shouldShowRequiredError('description'), 'is-valid': isValid('description')}"></textarea>
+                    <span class="custom-span">Description {{editForm.get('description').value?.length}}/5000</span>                    
                     <div *ngIf="shouldShowRequiredError('description')" class="invalid-feedback">veillez saisir la description.</div>
                 </div>
             </div>        
