--- a/src/app/modules/transport/visite-technique/edit/edit.component.html
+++ b/src/app/modules/transport/visite-technique/edit/edit.component.html
@@ -9,40 +9,42 @@
         <form class="custom-placeholder" [formGroup]="editForm">
             <div *ngIf="!(automobileId||isUpdating)" class="formSep form-group  d-flex justify-content-center pb-0 pt-3">
                 <div class="col-10">
-                    <label class="control-label" for="auto_id">Vehicule</label>
-                    <select class="form-control form-control-sm" mySelectFirstOption [class.loading]="allAutomobiles$ | async" required name="auto_id" [formControlName]="'auto_id'" [ngClass]="{'is-invalid': shouldShowRequiredError( 'auto_id'), 'is-valid': isValid('auto_id')}"
+                    <div class="input-group">
+                        <select class="custom-select" mySelectFirstOption [class.loading]="allAutomobiles$ | async" required name="auto_id" [formControlName]="'auto_id'" [ngClass]="{'is-invalid': shouldShowRequiredError( 'auto_id'), 'is-valid': isValid('auto_id')}"
                         required>
-                    <option value="">--choississez le vehicule --</option>
-                    <ng-container *ngFor="let item of (allAutomobiles$ | async)">
-                        <option [ngValue]="item.id">{{item.libelle | titlecase}}</option>
-                    </ng-container>
-                </select>
+                            <ng-container *ngFor="let item of (allAutomobiles$ | async)">
+                                <option [ngValue]="item.id">{{item.libelle | titlecase}}</option>
+                            </ng-container>
+                        </select>
+                        <span class="custom-span">Vehicule</span>
+                    </div>
                     <div *ngIf="shouldShowRequiredError('auto_id')" class="invalid-feedback">veillez choisir le vehicule.</div>
                 </div>
             </div>
             <div class="formSep form-group  d-flex justify-content-center pb-0  pt-3">
                 <div class="col-10">
-                    <label class="control-label" for="libelle">Fournisseur</label>
-                    <select class="form-control form-control-sm" mySelectFirstOption required name="coordonnee_id" [formControlName]="'coordonnee_id'" [ngClass]="{'is-invalid': shouldShowRequiredError( 'coordonnee_id') , 'is-valid': isValid('coordonnee_id')}" required>
-                        <ng-container *ngFor="let item of (allCoordonnees$ | async)">
-                            <option [ngValue]="item.id">{{item.libelle}} </option>
-                        </ng-container>
-                    </select>
+                    <div class="input-groupe">
+                        <select class="custom-select" mySelectFirstOption required name="coordonnee_id" [formControlName]="'coordonnee_id'" [ngClass]="{'is-invalid': shouldShowRequiredError( 'coordonnee_id') , 'is-valid': isValid('coordonnee_id')}" required>
+                            <ng-container *ngFor="let item of (allCoordonnees$ | async)">
+                                <option [ngValue]="item.id">{{item.libelle}} </option>
+                            </ng-container>
+                        </select>
+                        <span class="custom-span">Fournisseur</span> 
+                    </div> 
                     <div *ngIf="shouldShowRequiredError('coordonnee_id')" class="invalid-feedback">veillez choisir.</div>
                 </div>
             </div>
             <div class="formSep form-group  d-flex justify-content-center pb-0 pt-3">
                 <div class="col-10">
-                    <label class="control-label" for="libelle">Date Visite</label>
-                    <input class="form-control form-control-sm" name="dp" (click)="d.toggle()" ngbDatepicker #d="ngbDatepicker" [formControlName]="'date_visite'" [ngClass]="{'is-invalid': shouldShowRequiredError('date_visite'), 'is-valid': isValid('date_visite')}" required>
+                    <input class="form-control" name="dp" (click)="d.toggle()" ngbDatepicker #d="ngbDatepicker" [formControlName]="'date_visite'" [ngClass]="{'is-invalid': shouldShowRequiredError('date_visite'), 'is-valid': isValid('date_visite')}" required>
+                    <span class="custom-span">Date Visite</span>                     
                     <div *ngIf="shouldShowRequiredError('date_visite')" class="invalid-feedback">veillez saisir la date.</div>
                 </div>
             </div>
             <div class="formSep form-group  d-flex justify-content-center pb-0 pt-3">
                 <div class="col-10">
-                    <label class="control-label" for="libelle">Observation</label>
-                    <textarea name="libelle" required maxlength="5000" class="form-control form-control-sm" cols="30" rows="3" [formControlName]="'libelle'" [ngClass]="{'is-invalid': shouldShowRequiredError('libelle'), 'is-valid': isValid('libelle')}"></textarea>
-                    <small>{{editForm.get('libelle').value?.length}}/5000</small>
+                    <textarea name="libelle" required maxlength="5000" class="form-control" cols="30" rows="3" [formControlName]="'libelle'" [ngClass]="{'is-invalid': shouldShowRequiredError('libelle'), 'is-valid': isValid('libelle')}"></textarea>
+                    <span class="custom-span">Observation {{editForm.get('libelle').value?.length}}/5000</span> 
                     <div *ngIf="shouldShowRequiredError('libelle')" class="invalid-feedback">veillez saisir l'observation.</div>
                 </div>
             </div>        
