--- a/src/app/modules/transport/assurance/assurance.component.html
+++ b/src/app/modules/transport/assurance/assurance.component.html
@@ -85,18 +85,42 @@
     <div class="main-content scroll-11" [class.main-content_large]="selectedAssurance">
         <div class="card shadow mb-2 p-0"  *ngIf="selectedAssurance">
             <!-- Card Header - Dropdown -->
-            <div class="card-header py-2 d-flex align-items-center text-center">
-                <button class="btn btn-link  mr-3" (click)="onSetSelected()">
-                    <i class="fad fa-arrow-alt-left bg-light tx-success card-1"
-                        style="padding:6px; border-radius:50%"></i>
-                </button>
-                <button class="btn btn-link  mr-3" (click)="onShowUpdateForm(selectedAssurance)">
-                    <i class="fad fa-edit bg-light tx-success card-1"
-                        style="padding:6px; border-radius:50%"></i>
-                </button>
-                <h6 class="m-0 font-weight-bold text-secondary text-center">
-                    {{selectedAssurance.libelle}}
-                </h6>
+            <div class="card-header py-2  d-flex justify-content-between align-items-center text-center">
+                <span class="d-flex align-items-center">
+                    <button class="btn btn-link  mr-3" (click)="onSetSelected()">
+                        <i class="fad fa-arrow-alt-left bg-light tx-success card-1"
+                            style="padding:6px; border-radius:50%"></i>
+                    </button>
+                  
+                    <h6 class="m-0 font-weight-bold text-secondary text-center">
+                        {{selectedAssurance.libelle}}
+                    </h6>    
+                </span>
+                <div class="float">
+                    <div>
+                        <ul class="nav float-right list-inline justify-content-end">
+                            <li class="nav-item">
+                                <button class="btn btn-link" container="body"
+                                    [ngbTooltip]="'Supprimer'"
+                                    (click)="onDelete(selectedAssurance)">
+                                    <span>
+                                        <i class="fad card-1 fa-trash  tx-16 bg-danger text-white"
+                                            style="padding:6px; border-radius:50%"></i>
+                                    </span>
+                                </button>
+                            </li>
+                            <li class="nav-item">
+                                <a class="btn btn-link" container="body" ngbTooltip="Modifier"
+                                    (click)="onShowUpdateForm(selectedAssurance)">
+                                    <span class="tx-echos">
+                                        <i class="fal card-1 fa-pencil bg-light tx-16 tx-yeto"
+                                            style="padding:6px; border-radius:50%"></i>
+                                    </span>
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
             </div>
             <!-- Card Body -->
             <div class="card-body">
@@ -279,13 +303,13 @@
         <p style="font-size: 18px;">{{modalData.description}}</p>
     </div>
     <div class="modal-footer ">
-        <button class="btn btn-light mx-2 " (click)="modal.close( 'Close click');onUpdateForm(modalData); "> <i class="fal fa-edit" style="color:#99600b"></i> Modifier</button>
+        <button class="btn btn-light mx-2 " (click)="modal.close( 'Close click');onShowUpdateForm(modalData); "> <i class="fal fa-edit" style="color:#99600b"></i> Modifier</button>
         <button type="button " class="btn btn-outline-dark " (click)="modal.close( 'Close click') ">Fermer</button>
     </div>
 </ng-template>
 
 <!-- ADD -->
-<div class="button-fixed-bottom-right" *ngIf="!_automobileId">
+<div class="button-fixed-bottom-right" *ngIf="(!_automobileId)&&(!selectedAssurance)">
     <button [disabled]="(dataHelper.loading$ | async)" (click)="onShowCreateForm();" title="Créer"  type="button"
       class="btn btn-primary btn-circle btn-lg">
       <i class="fas fa-plus-circle"></i>
