--- a/src/app/modules/transport/automobile/configuration/configuration.component.html
+++ b/src/app/modules/transport/automobile/configuration/configuration.component.html
@@ -1,14 +1,9 @@
 <div class="d-flex flex-wrap justify-content-between bd-t">
     <div class=" col-12 col-sm-3 p-0 bd-r bd-2" style="background:#FFFF;">
         <nav class="monmenu nav flex-row flex-sm-column flex-nowrap">
-            <a [class.active]="fragment == 'type'" routerLink="." [fragment]="'type'" class="d-flex nav-link align-items-center justify-content-between pb-2 pt-1 bd-b">
-                <div class="nav-link3 text-center">
-                    <i class="fal fa-car tx-20"></i> <span class="nav-tabs-hidden-xs mx-2">Types</span>
-                </div>
-            </a>
             <a [class.active]="fragment == 'carburant'" routerLink="." [fragment]="'carburant'" class="d-flex nav-link align-items-center justify-content-between pb-2 pt-1 bd-b">
                 <div class="nav-link3 text-center">
-                    <i class="fal fa-lightbulb tx-20"></i> <span class="nav-tabs-hidden-xs mx-2">Carburants</span>
+                    <i class="fal fa-gas-pump tx-20"></i> <span class="nav-tabs-hidden-xs mx-2">Carburants</span>
                 </div>
             </a>
             <a [class.active]="fragment == 'couleur'" routerLink="." [fragment]="'couleur'" class="d-flex nav-link align-items-center justify-content-between pb-2 pt-1 bd-b">
@@ -23,14 +18,14 @@
             </a>
             <a [class.active]="fragment == 'genre'" routerLink="." [fragment]="'genre'" class="d-flex nav-link align-items-center justify-content-between pb-2 pt-1 bd-b">
                 <div class="nav-link3 text-center">
-                    <i class="fal fa-palette tx-20"></i> <span class="nav-tabs-hidden-xs mx-2">Genres</span>
+                    <i class="fal fa-car-side tx-20"></i> <span class="nav-tabs-hidden-xs mx-2">Genres</span>
                 </div>
             </a>
-            <a [class.active]="fragment == 'lieu'" routerLink="." [fragment]="'lieu'" class="d-flex nav-link align-items-center justify-content-between pb-2 pt-1 bd-b">
+            <!-- <a [class.active]="fragment == 'lieu'" routerLink="." [fragment]="'lieu'" class="d-flex nav-link align-items-center justify-content-between pb-2 pt-1 bd-b">
                 <div class="nav-link3 text-center">
                     <i class="fal fa-map-marked tx-20"></i> <span class="nav-tabs-hidden-xs mx-2">Lieu</span>
                 </div>
-            </a>
+            </a> -->
             <a [class.active]="fragment == 'marque'" routerLink="." [fragment]="'marque'" class="d-flex nav-link align-items-center justify-content-between pb-2 pt-1 bd-b">
                 <div class="nav-link3 text-center">
                     <i class="fal fa-copyright tx-20"></i> <span class="nav-tabs-hidden-xs mx-2">Marques</span>
@@ -48,7 +43,17 @@
             </a>
             <a [class.active]="fragment == 'entretien'" routerLink="." [fragment]="'entretien'" class="d-flex nav-link align-items-center justify-content-between pb-2 pt-1 bd-b">
                 <div class="nav-link3 text-center">
-                    <i class="fal fa-palette tx-20"></i> <span class="nav-tabs-hidden-xs mx-2">Type Entretien</span>
+                    <i class="fal fa-car-mechanic tx-20"></i> <span class="nav-tabs-hidden-xs mx-2">Type Entretien</span>
+                </div>
+            </a>
+            <a [class.active]="fragment == 'permis'" routerLink="." [fragment]="'permis'" class="d-flex nav-link align-items-center justify-content-between pb-2 pt-1 bd-b">
+                <div class="nav-link3 text-center">
+                    <i class="fal fa-id-card tx-20"></i> <span class="nav-tabs-hidden-xs mx-2">Type Permis</span>
+                </div>
+            </a>
+            <a [class.active]="fragment == 'type'" routerLink="." [fragment]="'type'" class="d-flex nav-link align-items-center justify-content-between pb-2 pt-1 bd-b">
+                <div class="nav-link3 text-center">
+                    <i class="fal fa-car tx-20"></i> <span class="nav-tabs-hidden-xs mx-2">Type Vehicule</span>
                 </div>
             </a>
             <!-- <a [class.active]="fragment == 'masque-itineraire'" routerLink="." [fragment]="'masque-itineraire'" class="d-flex nav-link align-items-center justify-content-between pb-2 pt-1 bd-b">
@@ -75,9 +80,9 @@
             <div *ngSwitchCase="'modele'">
                 <app-modele></app-modele>
             </div>
-            <div *ngSwitchCase="'lieu'">
+            <!-- <div *ngSwitchCase="'lieu'">
                 <app-lieu></app-lieu>
-            </div>
+            </div> -->
             <div *ngSwitchCase="'serie'">
                 <app-serie></app-serie>
             </div>
@@ -86,6 +91,9 @@
             </div>
             <div *ngSwitchCase="'entretien'">
                 <app-entretien-type></app-entretien-type>
+            </div>
+            <div *ngSwitchCase="'permis'">
+                <app-permi-type></app-permi-type>
             </div>
             <!-- <div *ngSwitchCase="'masque-itineraire'">
                 <app-masque-itineraire></app-masque-itineraire>
