--- a/src/app/modules/transport/entretien-type/entretien-type.component.html
+++ b/src/app/modules/transport/entretien-type/entretien-type.component.html
@@ -47,11 +47,11 @@
             </button>
     </div>
     <div class="modal-body">
-        <h5>Description</h5>
-        <p style="font-size: 18px;">{{modalData.description}}</p>
+        <h5>Condition Entretien</h5>
+        <p style="font-size: 18px;">{{modalData.condition_entretien}}</p>
     </div>
     <div class="modal-footer ">
-        <button class="btn btn-light mx-2 " (click)="modal.close( 'Close click');onUpdateForm(modalData); "> <i class="fal fa-edit" style="color:#99600b"></i> Modifier</button>
+        <button class="btn btn-light mx-2 " (click)="modal.close( 'Close click');onShowUpdateForm(modalData); "> <i class="fal fa-edit" style="color:#99600b"></i> Modifier</button>
         <button type="button " class="btn btn-outline-dark " (click)="modal.close( 'Close click') ">Fermer</button>
     </div>
 </ng-template>
