--- a/src/app/modules/transport/entretien/edit/edit.component.html
+++ b/src/app/modules/transport/entretien/edit/edit.component.html
@@ -9,14 +9,15 @@
         <form class="custom-placeholder" [formGroup]="editForm">
             <div *ngIf="!(automobileId||isUpdating)" class="formSep form-group  d-flex justify-content-center pb-0 pt-3">
                 <div class="col-10">
-                    <label class="control-label" for="automobile_id">Vehicule</label>
-                    <select class="form-control form-control-sm" mySelectFirstOption [class.loading]="allAutomobiles$ | async" required name="automobile_id" [formControlName]="'automobile_id'" [ngClass]="{'is-invalid': shouldShowRequiredError( 'automobile_id'), 'is-valid': isValid('automobile_id')}"
+                    <div class="input-group">
+                        <select class="form-control" mySelectFirstOption [class.loading]="allAutomobiles$ | async" required name="automobile_id" [formControlName]="'automobile_id'" [ngClass]="{'is-invalid': shouldShowRequiredError( 'automobile_id'), 'is-valid': isValid('automobile_id')}"
                         required>
-                    <option value="">--choississez le vehicule --</option>
-                    <ng-container *ngFor="let item of (allAutomobiles$ | async)">
-                        <option [ngValue]="item.id">{{item.libelle | titlecase}}</option>
-                    </ng-container>
-                </select>
+                            <ng-container *ngFor="let item of (allAutomobiles$ | async)">
+                                <option [ngValue]="item.id">{{item.libelle | titlecase}}</option>
+                            </ng-container>
+                        </select>
+                        <span class="custom-span">Vehicule </span>
+                    </div>
                     <div *ngIf="shouldShowRequiredError('automobile_id')" class="invalid-feedback">veillez choisir le vehicule.</div>
                 </div>
             </div>
@@ -34,12 +35,14 @@
             </div>
             <div class="formSep form-group  d-flex justify-content-center pb-0 pt-3">
                 <div class="col-10">
-                    <label class="control-label">Statut</label>
-                    <select class="form-control form-control-sm" name="statut" [formControlName]="'statut'">
-                        <ng-container *ngFor="let item of frequenceSelect">
-                            <option [ngValue]="item.id">{{item.libelle}}</option>
-                        </ng-container>
-                      </select>
+                    <div class="input-group">
+                        <select class="custom-select" name="statut" [formControlName]="'statut'">
+                            <ng-container *ngFor="let item of frequenceSelect">
+                                <option [ngValue]="item.id">{{item.libelle}}</option>
+                            </ng-container>
+                        </select>
+                        <span class="custom-span">Statut </span>
+                    </div>
                     <div *ngIf="shouldShowRequiredError('statut')" class="invalid-feedback">veillez choisir.</div>
                 </div>
             </div>    
@@ -62,9 +65,8 @@
             </div>
             <div class="formSep form-group  d-flex justify-content-center pb-0 pt-3">
                 <div class="col-10">
-                    <label class="control-label" for="libelle">Observation</label>
                     <textarea name="libelle" required maxlength="5000" class="form-control form-control-sm" cols="30" rows="3" [formControlName]="'libelle'" [ngClass]="{'is-invalid': shouldShowRequiredError('libelle'), 'is-valid': isValid('libelle')}"></textarea>
-                    <small>{{editForm.get('libelle').value?.length}}/5000</small>
+                    <span class="custom-span">Observation {{editForm.get('libelle').value?.length}}/5000</span>
                     <div *ngIf="shouldShowRequiredError('libelle')" class="invalid-feedback">veillez saisir l'observation.</div>
                 </div>
             </div>        
